[package]
name = "rodent_logger_cli"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[bin]]
name = "rodent_logger"
path = "src/main.rs"

[dependencies]
rodent_logger_core = { path = "../rodent_logger_core" }
clap = { version = "4.6.1", features = ["derive"] }
chrono = "0.4.45"
ctrlc = "3.5.2"
etherparse = "0.20.2"
pcap = "2.4.0"
serde_json = "1.0"
